# ogl_gen_reflect_file

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: command_input.cpp  command_input.hpp  gen_reflection_file.hpp  main.cpp  parser.cpp  parser.hpp  reflection_parser.cpp  reflection_parser.hpp
test/: game_components.hpp
